@@ -16,12 +16,15 @@ import com.fasterxml.jackson.databind.module.SimpleModule;
 import com.powsybl.commons.test.AbstractConverterTest;
 import com.powsybl.commons.test.ComparisonUtils;
 import com.powsybl.contingency.ContingencyContext;
+import com.powsybl.iidm.network.PhaseTapChanger;
 import com.powsybl.iidm.network.ThreeWindingsTransformer;
 import com.powsybl.security.action.*;
+import com.powsybl.security.condition.AllViolationCondition;
+import com.powsybl.security.condition.AnyViolationCondition;
 import com.powsybl.security.condition.TrueCondition;
 import com.powsybl.security.strategy.OperatorStrategy;
 import com.powsybl.security.strategy.OperatorStrategyList;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import java.io.*;
 import java.util.ArrayList;
@@ -29,15 +32,17 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
-import static org.junit.Assert.*;
+import static com.powsybl.iidm.network.HvdcLine.ConvertersMode.SIDE_1_RECTIFIER_SIDE_2_INVERTER;
+import static org.junit.jupiter.api.Assertions.*;
+import static com.powsybl.security.LimitViolationType.*;
 
 /**
  * @author Etienne Lesot <etienne.lesot@rte-france.com>
  */
-public class JsonActionAndOperatorStrategyTest extends AbstractConverterTest {
+class JsonActionAndOperatorStrategyTest extends AbstractConverterTest {
 
     @Test
-    public void actionRoundTrip() throws IOException {
+    void actionRoundTrip() throws IOException {
         List<Action> actions = new ArrayList<>();
         actions.add(new SwitchAction("id1", "switchId1", true));
         actions.add(new MultipleActionsAction("id2", Collections.singletonList(new SwitchAction("id3", "switchId2", true))));
@@ -52,12 +57,60 @@ public class JsonActionAndOperatorStrategyTest extends AbstractConverterTest {
         actions.add(new GeneratorActionBuilder().withId("id11").withGeneratorId("generatorId2").withVoltageRegulatorOn(false).withTargetQ(400.0).build());
         actions.add(new LoadActionBuilder().withId("id12").withLoadId("loadId1").withRelativeValue(false).withActivePowerValue(50.0).build());
         actions.add(new LoadActionBuilder().withId("id13").withLoadId("loadId1").withRelativeValue(true).withReactivePowerValue(5.0).build());
+        actions.add(new RatioTapChangerTapPositionAction("id14", "transformerId4", false, 2, ThreeWindingsTransformer.Side.THREE));
+        actions.add(new RatioTapChangerTapPositionAction("id15", "transformerId5", true, 1));
+        actions.add(RatioTapChangerRegulationAction.activateRegulation("id16", "transformerId5", ThreeWindingsTransformer.Side.THREE));
+        actions.add(PhaseTapChangerRegulationAction.activateAndChangeRegulationMode("id17", "transformerId5", ThreeWindingsTransformer.Side.ONE,
+                PhaseTapChanger.RegulationMode.ACTIVE_POWER_CONTROL, 10.0));
+        actions.add(PhaseTapChangerRegulationAction.deactivateRegulation("id18",
+                "transformerId6", ThreeWindingsTransformer.Side.ONE));
+        actions.add(PhaseTapChangerRegulationAction.activateAndChangeRegulationMode("id19",
+                "transformerId6", ThreeWindingsTransformer.Side.ONE,
+                PhaseTapChanger.RegulationMode.ACTIVE_POWER_CONTROL, 15.0));
+        actions.add(RatioTapChangerRegulationAction.activateRegulationAndChangeTargetV("id20", "transformerId5", 90.0));
+        actions.add(RatioTapChangerRegulationAction.deactivateRegulation("id21", "transformerId5", ThreeWindingsTransformer.Side.THREE));
+        actions.add(new HvdcActionBuilder()
+                .withId("id22")
+                .withHvdcId("hvdc1")
+                .withAcEmulationEnabled(false)
+                .build());
+        actions.add(new HvdcActionBuilder()
+                .withId("id23")
+                .withHvdcId("hvdc2")
+                .withAcEmulationEnabled(true)
+                .build());
+        actions.add(new HvdcActionBuilder()
+                .withId("id24")
+                .withHvdcId("hvdc2")
+                .withAcEmulationEnabled(true)
+                .withDroop(121.0)
+                .withP0(42.0)
+                .withConverterMode(SIDE_1_RECTIFIER_SIDE_2_INVERTER)
+                .withRelativeValue(false)
+                .build());
+        actions.add(new HvdcActionBuilder()
+                .withId("id25")
+                .withHvdcId("hvdc1")
+                .withAcEmulationEnabled(false)
+                .withActivePowerSetpoint(12.0)
+                .withRelativeValue(true)
+                .build());
+        actions.add(new ShuntCompensatorPositionActionBuilder().withId("id22").withShuntCompensatorId("shuntId1").withSectionCount(5).build());
         ActionList actionList = new ActionList(actions);
         roundTripTest(actionList, ActionList::writeJsonFile, ActionList::readJsonFile, "/ActionFileTest.json");
     }
 
     @Test
-    public void operatorStrategyReadV10() throws IOException {
+    void actionsReadV10() throws IOException {
+        ActionList actionList = ActionList.readJsonInputStream(getClass().getResourceAsStream("/ActionFileTestV1.0.json"));
+        try (ByteArrayOutputStream bos = new ByteArrayOutputStream()) {
+            actionList.writeJsonOutputStream(bos);
+            ComparisonUtils.compareTxt(getClass().getResourceAsStream("/ActionFileTest.json"), new ByteArrayInputStream(bos.toByteArray()));
+        }
+    }
+
+    @Test
+    void operatorStrategyReadV10() throws IOException {
         OperatorStrategyList operatorStrategies = OperatorStrategyList.read(getClass().getResourceAsStream("/OperatorStrategyFileTestV1.0.json"));
         try (ByteArrayOutputStream bos = new ByteArrayOutputStream()) {
             operatorStrategies.write(bos);
@@ -66,25 +119,41 @@ public class JsonActionAndOperatorStrategyTest extends AbstractConverterTest {
     }
 
     @Test
-    public void operatorStrategyRoundTrip() throws IOException {
+    void operatorStrategyRoundTrip() throws IOException {
         List<OperatorStrategy> operatorStrategies = new ArrayList<>();
-        operatorStrategies.add(new OperatorStrategy("id1", ContingencyContext.specificContingency("contingencyId1"), new TrueCondition(), Arrays.asList("actionId1", "actionId2", "actionId3")));
-        operatorStrategies.add(new OperatorStrategy("id1", ContingencyContext.specificContingency("contingencyId1"), new TrueCondition(), Arrays.asList("actionId1", "actionId2", "actionId3")));
+        operatorStrategies.add(new OperatorStrategy("id1", ContingencyContext.specificContingency("contingencyId1"),
+                new TrueCondition(), Arrays.asList("actionId1", "actionId2", "actionId3")));
+        operatorStrategies.add(new OperatorStrategy("id2", ContingencyContext.specificContingency("contingencyId2"),
+                new AnyViolationCondition(), List.of("actionId4")));
+        operatorStrategies.add(new OperatorStrategy("id3", ContingencyContext.specificContingency("contingencyId1"),
+                new AnyViolationCondition(Collections.singleton(CURRENT)),
+                Arrays.asList("actionId1", "actionId3")));
+        operatorStrategies.add(new OperatorStrategy("id4", ContingencyContext.specificContingency("contingencyId3"),
+                new AnyViolationCondition(Collections.singleton(LOW_VOLTAGE)),
+                Arrays.asList("actionId1", "actionId2", "actionId4")));
+        operatorStrategies.add(new OperatorStrategy("id5", ContingencyContext.specificContingency("contingencyId4"),
+                new AllViolationCondition(Arrays.asList("violation1", "violation2"),
+                        Collections.singleton(HIGH_VOLTAGE)),
+                Arrays.asList("actionId1", "actionId5")));
+        operatorStrategies.add(new OperatorStrategy("id6", ContingencyContext.specificContingency("contingencyId5"),
+                new AllViolationCondition(Arrays.asList("violation1", "violation2")),
+                List.of("actionId3")));
         OperatorStrategyList operatorStrategyList = new OperatorStrategyList(operatorStrategies);
         roundTripTest(operatorStrategyList, OperatorStrategyList::write, OperatorStrategyList::read, "/OperatorStrategyFileTest.json");
     }
 
     @Test
-    public void wrongActions() {
+    void wrongActions() {
         final InputStream inputStream = getClass().getResourceAsStream("/WrongActionFileTest.json");
         assertEquals("com.fasterxml.jackson.databind.JsonMappingException: for phase tap changer tap position action relative value field can't be null\n" +
                 " at [Source: (BufferedInputStream); line: 8, column: 3] (through reference chain: java.util.ArrayList[0])", assertThrows(UncheckedIOException.class, () ->
                 ActionList.readJsonInputStream(inputStream)).getMessage());
 
-        final InputStream inputStream2 = getClass().getResourceAsStream("/WrongActionFileTest2.json");
-        assertEquals("com.fasterxml.jackson.databind.JsonMappingException: for phase tap changer tap position action value field can't equal zero\n" +
-                " at [Source: (BufferedInputStream); line: 8, column: 3] (through reference chain: java.util.ArrayList[0])", assertThrows(UncheckedIOException.class, () ->
-                ActionList.readJsonInputStream(inputStream2)).getMessage());
+        final InputStream inputStream3 = getClass().getResourceAsStream("/ActionFileTestWrongVersion.json");
+        assertTrue(assertThrows(UncheckedIOException.class, () -> ActionList
+                .readJsonInputStream(inputStream3))
+                .getMessage()
+                .contains("actions. Tag: value is not valid for version 1.1. Version should be <= 1.0"));
     }
 
     @JsonTypeName(DummyAction.NAME)
@@ -105,7 +174,7 @@ public class JsonActionAndOperatorStrategyTest extends AbstractConverterTest {
     }
 
     @Test
-    public void testJsonPlugins() throws JsonProcessingException {
+    void testJsonPlugins() throws JsonProcessingException {
 
         Module jsonModule = new SimpleModule()
                 .registerSubtypes(DummyAction.class);
